benchmark fixes